18-exportdiagramasanimage: FIXED Jenkins conf