@@ -11,6 +11,7 @@
     <java.version>17</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
+    <compiler-plugins.version>3.0.0-M7</compiler-plugins.version>
     <javafx.version>17.0.2</javafx.version>
     <testfx.version>4.0.16-alpha</testfx.version>
     <logback.version>1.3.0-alpha16</logback.version>
@@ -190,8 +191,30 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
-        <version>3.0.0-M5</version>
+        <version>${compiler-plugins.version}</version>
         <configuration>
+          <argLine>@{argLine} --add-exports javafx.graphics/com.sun.javafx.application=org.testfx</argLine>
+          <additionalClasspathElements>
+            <additionalClasspathElement>${basedir}/target/test-classes</additionalClasspathElement>
+          </additionalClasspathElements>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${compiler-plugins.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <includes>
+            <include>**/*ITest</include>
+          </includes>
           <argLine>@{argLine} --add-exports javafx.graphics/com.sun.javafx.application=org.testfx</argLine>
           <additionalClasspathElements>
             <additionalClasspathElement>${basedir}/target/test-classes</additionalClasspathElement>
